app/styles/main.css
/* Space out content a bit */
body {
  padding-top: 104px;
  padding-bottom: 20px;
}

/* Everything but the jumbotron gets side spacing for mobile first views */
.header,
.marketing,
.footer {
  padding-left: 15px;
  padding-right: 15px;
}

/* Custom page header */
.header {
  border-bottom: 1px solid #e5e5e5;
}

/* Make the masthead heading the same height as the navigation */
.header h3 {
  margin-top: 0;
  margin-bottom: 0;
  line-height: 40px;
  padding-bottom: 19px;
}

/* Custom page footer */
.footer {
  padding-top: 19px;
  color: #777;
  border-top: 1px solid #e5e5e5;
}

/* Customize container */
@media (min-width: 768px) {
  .container {
    max-width: 730px;
  }
}

.container-narrow > hr {
  margin: 30px 0;
}

/* Main marketing message and sign up button */
.jumbotron {
  text-align: center;
  border-bottom: 1px solid #e5e5e5;
}

.jumbotron .btn {
  font-size: 21px;
  padding: 14px 24px;
}

/* Supporting marketing content */
.marketing {
  margin: 40px 0;
}

.marketing p + h4 {
  margin-top: 28px;
}

/* Responsive: Portrait tablets and up */
@media screen and (min-width: 768px) {
  /* Remove the padding we set earlier */
  .header,
  .marketing,
  .footer {
    padding-left: 0;
    padding-right: 0;
  }

  /* Space out the masthead */
  .header {
    margin-bottom: 30px;
  }

  /* Remove the bottom border on the jumbotron for visual effect */
  .jumbotron {
    border-bottom: 0;
  }
}

.angular-google-map-container {
  height: 273px;
}

body {
  font: 12px "Open Sans", Arial, Helvetica, sans-serif;
  line-height: 18px;
  color: #707070;
}

h3, h4 {
  font: 14px 'Open Sans', Arial, Helvetica, sans-serif;
  color: #222;
  text-transform: uppercase;
  margin-bottom: 19px;
  letter-spacing: 1px;
}

h2 {
  color: #444;
  font: 600 24px/29px "Open Sans", Arial, Helvetica, sans-serif;
  margin: 0 0 17px 0;
  letter-spacing: 1px;
  text-transform: uppercase;
}

a {
  font: "Helvetica Neue", Helvetica, Arial, sans-serif;
  font-size: 14px;
}

.unSeparador{
	background-color: rgb(176, 178, 173);
	height: 1px;
	margin-top: 20px;
}

